// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionToolbar /> should not render create button when [canModify=false] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="Name"
    value="foo"
  />
</Toolbar>
`;

exports[`<SubtractionToolbar /> should render create button when [canModify=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="Name"
    value="foo"
  />
  <LinkButton
    color="blue"
    icon="plus-square"
    tip="Create"
    tipPlacement="top"
    to="subtraction/create"
  />
</Toolbar>
`;
